Fixes typo in Pinterest

--- a/css/block/social-media-icons.css
+++ b/css/block/social-media-icons.css
@@ -110,7 +110,7 @@
   background-color: #fbbc05;
 }
 
-.social-media-icons-block .icon-bg-pintrest {
+.social-media-icons-block .icon-bg-pinterest {
   background-color: #c92619;
 }
 
