--- a/templates/navigation/menu--social-media-menu.html.twig
+++ b/templates/navigation/menu--social-media-menu.html.twig
@@ -50,8 +50,8 @@
         {{ _self.link('LinkedIn', uri, 'fa-brands fa-linkedin-in', 'linkedin') }}
       {% elseif hostname matches '/youtube\\.com$/i' %}
         {{ _self.link('YouTube', uri, 'fa-brands fa-youtube', 'youtube') }}
-      {% elseif hostname matches '/(pintrest\\.com|pin\\.it)$/i' %}
-        {{ _self.link('Pintrest', uri, 'fa-brands fa-pinterest-p', 'pintrest') }}
+      {% elseif hostname matches '/(pinterest\\.com|pin\\.it)$/i' %}
+        {{ _self.link('Pinterest', uri, 'fa-brands fa-pinterest-p', 'pinterest') }}
       {% elseif hostname matches '/(flickr\\.com|flic\\.kr)$/i' %}
         {{ _self.link('Flickr', uri, 'fa-brands fa-flickr', 'flickr') }}
       {% elseif hostname matches '/vimeo\\.com$/i' %}
