Removes ul and li elements for Gmail + Outlook compatabilitiy

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -234,6 +234,10 @@ td>h3>a{
     padding: 10px;
 }
 
+.ucb-email-social-icon{
+    padding: 0px 10px;
+}
+
 
 @media only screen and (max-width: 500px) {
   .promo-block-row {
