--- a/templates/field/field--block-content--field-calendar-code.html.twig
+++ b/templates/field/field--block-content--field-calendar-code.html.twig
@@ -6,9 +6,20 @@
 #}
 
 {% for item in items %}
-       {% if ('text/javascript' in item.content['#context'].value|render) and ('src="https://calendar.colorado.edu/widget' in item.content['#context'].value|render) %}
-        <div class="ucb-events-calendar">{{ item.content['#context'].value|t }}</div>
-    {% else %}
-    <strong>Error: Only calendar.colorado.edu events embed code is allowed.</strong>
-    {% endif %}
+	{% if ('text/javascript' in item.content['#context'].value|render) and ('src="https://calendar.colorado.edu/widget' in item.content['#context'].value|render) %}
+		
+        {% set calendarCode = item.content['#context'].value|render|split('</script>') %}
+        {% set calendarCode = calendarCode.0 ~ '</script>' %}
+        
+        {% set calendarCode = {
+            '#type': 'processed_text',
+            '#text':  calendarCode,
+            '#format': 'full_html',
+        } %}
+
+        {{ calendarCode }}
+
+	{% else %}
+		<strong>Error: Only calendar.colorado.edu events embed code is allowed.</strong>
+	{% endif %}
 {% endfor %}
