--- a/templates/block/block--collection-grid.html.twig
+++ b/templates/block/block--collection-grid.html.twig
@@ -135,7 +135,7 @@
       </div>
       <div class="collection-grid-card-wrapper">
         <div class="collection-grid-filter-checks">
-        <span class = "collection-grid-filter-span-{{ blockID }}"></span>
+        <span hidden class="collection-grid-filter-span-{{ blockID }}"></span>
         </div>
         <div id="collections-grid-block-data-{{blockID}}" data-jsonapi="{{ collectionsJSON }}" data-jsoncats="{{ collectionsCatsJSON }}" data-extags="{{ content.field_collection_grid_type|render|striptags|trim}}" data-bodydisplay="{{ displayStyle }}" data-baseurl = {{ baseurlJSON}} class="collections-grid-block-data"></div>
       </div>
