CuBoulder/tiamat-theme#837 Resets styles targeting `<abbr>` tag in Events Calendar blocks

--- a/css/block/events-calendar.css
+++ b/css/block/events-calendar.css
@@ -2,6 +2,12 @@
   overflow: auto;
 }
 
+.ucb-events-calendar abbr {
+  text-decoration: none;
+  -webkit-text-decoration: none;
+  cursor: inherit;
+}
+
 .ucb-events-calendar .localist_minicalendar_events {
   flex-grow: 1;
 }
