--- a/templates/block/block--image-gallery.html.twig
+++ b/templates/block/block--image-gallery.html.twig
@@ -52,7 +52,7 @@
 			</div>
 		{% endif %}
 		{{ title_suffix }}
-		<div class="row row-cols-lg-6 row-cols-md-3 row-cols-2 gallery-div">
+		<div class="row row-cols-lg-6 row-cols-md-3 row-cols-2 g-4 gallery-div">
 			{% for key, item in content['#block_content'].field_image_gallery_photo  %}
 				{% if key|first != '#' %}
 					{% if item.entity.field_media_image_caption.value|render|striptags|trim %}
