--- a/templates/block/block--content-grid.html.twig
+++ b/templates/block/block--content-grid.html.twig
@@ -75,10 +75,10 @@
 			<div class="row row-cols-lg-{{ columnNumbers }} row-cols-md-2 row-cols-1">
 				{% for key, item in content['#block_content'].field_grid_layout_content %}
 					{%  if key|first != '#' %}
-						{% if imgStyle == "square-img" %}
+						{% if (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "square-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
-						{% else %}
+						{% elseif (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "wide-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
 						{% endif %}
@@ -118,10 +118,10 @@
 			<div class="row row-cols-lg-{{ columnNumbers }} row-cols-md-2 row-cols-1">
 				{% for key, item in content['#block_content'].field_grid_layout_content %}
 					{%  if key|first != '#' %}
-						{% if imgStyle == "square-img" %}
+						{% if (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "square-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
-						{% else %}
+						{% elseif (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "wide-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
 						{% endif %}
@@ -161,10 +161,10 @@
 			<div class="row row-cols-lg-{{ columnNumbers }} row-cols-md-2 row-cols-1">
 				{% for key, item in content['#block_content'].field_grid_layout_content %}
 					{%  if key|first != '#' %}
-						{% if imgStyle == "square-img" %}
+						{% if (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "square-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
-						{% else %}
+						{% elseif (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "wide-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
 						{% endif %}
@@ -199,10 +199,10 @@
 			<div class="row row-cols-lg-2 row-cols-1">
 				{% for key, item in content['#block_content'].field_grid_layout_content %}
 					{%  if key|first != '#' %}
-						{% if imgStyle == "square-img" %}
+						{% if (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "square-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
-						{% else %}
+						{% elseif (item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null) and (imgStyle == "wide-img") %}
 							{% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide') %}
 							{% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt|render %}
 						{% endif %}
