--- a/templates/block/block--content-grid.html.twig
+++ b/templates/block/block--content-grid.html.twig
@@ -85,7 +85,7 @@
 						{% set gridLink = item.entity.field_grid_layout_content_link.0.url|render %}
 						<div class="col">
 							<div class="grid-column">
-								{% if item.entity.field_grid_layout_content_image|view %}
+								{% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
 									<div class="grid-image-container grid-fill {{ imgStyle }}">
 										{% if item.entity.field_grid_layout_content_link.0.url|render %}
 											<a href=" {{ gridLink }} ">
@@ -128,7 +128,7 @@
 						{% set gridLink = item.entity.field_grid_layout_content_link.0.url|render %}
 						<div class="col">
 							<div class="grid-card">
-								{% if item.entity.field_grid_layout_content_image|view %}
+								{% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
 									<div class="grid-image-container grid-fill {{ imgStyle }}">
 										{% if item.entity.field_grid_layout_content_link.0.url|render %}
 											<a href=" {{ gridLink }} ">
@@ -171,7 +171,7 @@
 						{% set gridLink = item.entity.field_grid_layout_content_link.0.url|render %}
 						<div class="col">
 							<div class="grid-column">
-								{% if item.entity.field_grid_layout_content_image|view %}
+								{% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
 									<div class="overlay-grid-image-container grid-fill {{ imgStyle }}">
 										{% if item.entity.field_grid_layout_content_link.0.url|render %}
 											<a href=" {{ gridLink }} ">
@@ -210,7 +210,7 @@
 						{% if (loop.index0 % 3 == 0) and ((loop.index0 is even) or (loop.index0 == 0)) %}
 							<div class="col">
 								<div class="grid-image-container-large">
-									{% if item.entity.field_grid_layout_content_image|view %}
+									{% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
 										<div class="grid-image-container grid-fill {{ imgStyle }}">
 											{% if item.entity.field_grid_layout_content_link.0.url|render %}
 												<a href=" {{ gridLink }} ">
@@ -238,7 +238,7 @@
 						{% elseif (loop.index % 3 == 0) and (loop.index != 3) and (loop.index0 is odd) %}
 							<div class="col">
 								<div class="grid-image-container-large">
-									{% if item.entity.field_grid_layout_content_image|view %}
+									{% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
 										<div class="grid-image-container grid-fill {{ imgStyle }}">
 											{% if item.entity.field_grid_layout_content_link.0.url|render %}
 												<a href=" {{ gridLink }} ">
@@ -266,9 +266,9 @@
 						{% else %}
 							<div class="col-lg-3 col-md-6 col">
 								<div class="grid-image-container-small">
-									{% if item.entity.field_grid_layout_content_image|view %}
+									{% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
 										<div class="grid-image-container grid-fill {{ imgStyle }}">
-											{% if item.entity.field_grid_layout_content_image|view %}
+											{% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri is not null %}
 												<a href=" {{ gridLink }} ">
 													<img src="{{ imgUrl }}" alt="{{ imgAlt }}"/>
 												</a>
