--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -523,7 +523,13 @@ td>h3>a{
                                         {% set service = 'X' %}
                                     {% endif %}
 
-                                    <a href="{{ uri }}" title="{{ service|default('Social link') }}">
+                                    {% set alt = service|default('Social link') %}
+                                    {% set color = designType == 'darkbox' or designType == 'simple' or designType == 'classic' ? 'white' : 'black' %}
+                                    <a{{ create_attribute({ class: 'ucb-email-social-icon', href: uri }) }}>
+                                        <img{{ create_attribute({
+                                            src: base_url ~ '/' ~  base_path ~ directory ~ '/images/social_icons/' ~ color ~ '-' ~ service|lower ~ '.png',
+                                            alt: alt,
+                                            style: 'width:20px;height:20px' }) }}>
                                     </a>
                                 {% endfor %}
                                 </center>
