Adds closing `/` to `img` tag

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -529,7 +529,7 @@ td>h3>a{
                                         <img{{ create_attribute({
                                             src: base_url ~ '/' ~  base_path ~ directory ~ '/images/social_icons/' ~ color ~ '-' ~ service|lower ~ '.png',
                                             alt: alt,
-                                            style: 'width:20px;height:20px' }) }}>
+                                            style: 'width:20px;height:20px' }) }}/>
                                     </a>
                                 {% endfor %}
                                 </center>
