--- a/css/block/ucb-article-feature-block.css
+++ b/css/block/ucb-article-feature-block.css
@@ -53,14 +53,15 @@
 }
 
 .ucb-stacked-secondary-container {
-  margin-top: 10px;
-  padding-top: 20px;
-  border-top: solid 1px rgba(128, 128, 128, 0.333);
-  margin-bottom: 10px;
-  border-bottom: solid 1px rgba(128, 128, 128, 0.333);
-  padding-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 30px;
+    margin: 0px 10px;
+    padding-top: 20px;
+    border-top: solid 1px rgba(128, 128, 128, 0.333);
+    margin-bottom: 20px;
+    border-bottom: solid 1px rgba(128, 128, 128, 0.333);
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .ucb-stacked-primary-container {
@@ -72,6 +73,7 @@
   font-weight: normal;
   margin: 0;
   line-height: 1.3;
+  flex-shrink: 1;
 }
 
 .ucb-feature-article-summary {
@@ -93,7 +95,7 @@
 .ucb-stacked-secondary-container > .ucb-article-card {
   margin-bottom: 0px;
   border-bottom: none;
-  padding-bottom: 0px;
+  padding: 0px;
 }
 
 @media screen and (max-width: 767px) {
