CuBoulder/tiamat-theme#786 CuBoulder/tiamat-theme#787 Adds sortable table style fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1074,3 +1074,25 @@ form input[type="radio"]+label {
   color: var(--button-text-color-blue) !important;
   background-color: var(--button-background-color-blue);
 }
+
+/* Overrides sortable table styles in the stable9 theme */
+
+table.table-sort {
+  width: 100%;
+}
+
+button.tabledrag-toggle-weight {
+  font-size: .75em;
+  padding: 0 .75em;
+  margin-bottom: 1em;
+}
+
+.draggable a.tabledrag-handle {
+  height: auto;
+  margin-left: -.5em;
+}
+
+a.tabledrag-handle .handle {
+  box-sizing: content-box;
+  margin: -0.25em 0.5em;
+}
