--- a/templates/layout/page--node--layout.html.twig
+++ b/templates/layout/page--node--layout.html.twig
@@ -48,22 +48,14 @@
  */
 #}
 
-{{ attach_library('boulder_base/ucb-search-page') }}
-
-	{% if ucb_rave_alerts %}
-		<rave-alert feed="https://www.getrave.com/rss/cuboulder/channel1" link="https://alerts.colorado.edu"></rave-alert>
-	{% endif %}
-
 <div class="layout-container ucb-page-container">
   {{ block("page_header", "page.html.twig") }}
   <div{{ create_attribute({ class: ['ucb-page-content', ucb_heading_font == 'normal' ? 'ucb-heading-font-normal'] }) }}>
     {{ page.highlighted }}
     {{ page.help }}
     <main role="main">
-      <div class="ucb-content-wrapper ucb-search-page-content container">
-	    <h1>Search</h1>
+        <h1>{{ page['#title'] }}</h1>
         {{ page.content }}
-      </div>
     </main>
   </div>
   {{ block("page_footer", "page.html.twig") }}
