CuBoulder/tiamat-theme#893 Fixes style issue of text fields under "Advanced search"

--- a/css/style.css
+++ b/css/style.css
@@ -981,6 +981,10 @@ form label {
   display: block;
 }
 
+.fieldset-wrapper {
+  box-sizing: border-box;
+}
+
 .form-item,
 .form-actions {
   margin-top: 1em;
